--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,10 +15,13 @@
           <li><a href="/">Главная</a></li>
           <li><a href="/explore">Изучить</a></li>
           <li><a href="/messages">Мессенджер</a></li>
-          <li><% if (user) { %>
-            <a href="/profile">Профиль</a>
+          <% if (user) { %> 
+            <li><a href="/profile/<%= user.Id %>">Профиль</a></li> 
+            <li><a href="/logout">Выйти</a></li>
+          <% } else { %>
+            <li><a href="/login">Войти</a></li>
+            <li><a href="/register">Регистрация</a></li>
           <% } %>
-          </li>
         </ul>
       </nav>
     </div>
